--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -20,38 +20,40 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v2
+      - name: Install OpenJDK
+        run: sudo apt-get install -y openjdk-11-jdk
+
+      - name: Install Android SDK
+        uses: actions/setup-android@v2
+        with:
+          sdk-version: '31.0.0' # Replace with your desired SDK version
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-
       - name: Build APK
         run: ./gradlew assembleRelease
 
-      - name: Download and Set up Android SDK
-        uses: android-actions/setup-android@v2
-        with:
-            sdk-platform: '30'
+      - name: Set up jarsigner
+        run: sudo update-alternatives --set "jarsigner" "$(update-alternatives --list "jarsigner" | grep "java-1.11.0-openjdk" | head -n 1)"
 
-      - name: Decode Keystore
+
+      - name: Retrieve PK8 and PEM from secrets
         run: |
-            echo ${{ secrets.KEYSTORE }} | base64 -d > keystore.jks
+          echo "$PLATFORM_PK8" | base64 -d > keystore.pk8
+          echo "$PLATFORM_PEM" | base64 -d > keystore.pem
+
+      - name: Retrieve keystore alias and password from secrets
+        env:
+          KEYSTORE_ALIAS: ${{ secrets.KEYSTORE_ALIAS }}
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+        run: |
+          echo "KEY_ALIAS=${KEY_ALIAS}" >> $GITHUB_ENV
+          echo "KEY_STORE_PASSWORD=${KEY_STORE_PASSWORD}" >> $GITHUB_ENV
 
       - name: Sign APK
         run: |
-            # Assuming your .pk8 and .pem files are in the root directory
-                ~/android-sdk/build-tools/30.0.3/apksigner sign --ks keystore.jks \
-                          --ks-key-alias ${{ secrets.KEY_ALIAS }} \
-                          --ks-pass pass:${{ secrets.KEY_PASSWORD }} \
-                          --key-pass pass:${{ secrets.KEY_STORE_PASSWORD }} \
-                          --in app/build/outputs/apk/release/app-release-unsigned.apk \
-                          --out app/build/outputs/apk/release/app-release-signed.apk \
-                          --key-pk8 platform.pk8 \
-                          --key-pem platform.x509.pem
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: signed-apk
-          path: app/build/outputs/apk/release/app-release-signed.apk
+          jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore keystore.pk8 -storepass ${{ env.KEY_STORE_PASSWORD }} app-release-unsigned.apk ${{ env.KEY_ALIAS }}
+      - name: Verify and Align APK
+        run: |
+                zipalign -v 4 app-release-unsigned.apk app-release-signed-aligned.apk
+                mv app-release-signed-aligned.apk app-signed.apk
