--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -20,30 +20,27 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
       - name: Build APK
         run: ./gradlew assembleRelease
 
-      - name: Download and Set up Android SDK
-        uses: android-actions/setup-android@v2
-        with:
-          sdk-platform: '30'
+      - name: Download and Install apksigner
+        run: |
+          sdkmanager "build-tools;30.0.3"
 
       - name: Decode Keystore
         run: |
           echo ${{ secrets.KEYSTORE }} | base64 -d > keystore.jks
 
-
       - name: Sign APK
         run: |
-          # Download and install the apksigner tool
-          wget https://dl.google.com/android/repository/build-tools_r30.0.3-linux.zip
-          unzip -q build-tools_r30.0.3-linux.zip -d android-sdk/build-tools/
-          rm build-tools_r30.0.3-linux.zip
           # Assuming your .pk8 and .pem files are in the root directory
-          ./android-sdk/build-tools/30.0.3/apksigner sign --ks keystore.jks \
+          ~/usr/local/android-sdk/build-tools/30.0.3/apksigner sign --ks keystore.jks \
                         --ks-key-alias ${{ secrets.KEY_ALIAS }} \
                         --ks-pass pass:${{ secrets.KEY_PASSWORD }} \
                         --key-pass pass:${{ secrets.KEY_STORE_PASSWORD }} \
