--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -1,4 +1,4 @@
-name: Sign APK
+name: Build Debug APK
 
 on:
   push:
@@ -26,8 +26,8 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build APK
-        run: ./gradlew assembleRelease
+      - name: Build Debug APK
+        run: ./gradlew assembleDebug
 
       - name: Download and Install apksigner
         run: |
@@ -44,13 +44,13 @@ jobs:
                         --ks-key-alias ${{ secrets.KEY_ALIAS }} \
                         --ks-pass pass:${{ secrets.KEY_PASSWORD }} \
                         --key-pass pass:${{ secrets.KEY_STORE_PASSWORD }} \
-                        --in app/build/outputs/apk/release/app-release-unsigned.apk \
-                        --out app/build/outputs/apk/release/app-release-signed.apk \
+                        --in app/build/outputs/apk/debug/app-debug.apk \
+                        --out app/build/outputs/apk/debug/app-debug-signed.apk \
                         --key-pk8 platform.pk8 \
                         --key-pem platform.x509.pem
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: signed-apk
-          path: app/build/outputs/apk/release/app-release-signed.apk
+          name: debug-apk
+          path: app/build/outputs/apk/debug/app-debug-signed.apk
