--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -39,15 +39,10 @@ jobs:
 
       - name: Sign Debug APK
         run: |
-          # Assuming your .pk8 and .pem files are in the root directory
-          $ANDROID_SDK_ROOT/build-tools/30.0.3/apksigner sign --ks keystore.jks \
-                        --ks-key-alias ${{ secrets.KEY_ALIAS }} \
-                        --ks-pass pass:${{ secrets.KEY_PASSWORD }} \
-                        --key-pass pass:${{ secrets.KEY_STORE_PASSWORD }} \
-                        --in app/build/outputs/apk/debug/app-debug.apk \
-                        --out app/build/outputs/apk/debug/app-debug-signed.apk \
-                        --key-pk8 platform.pk8 \
-                        --key-pem platform.x509.pem
+          cp keystore.jks app/build/outputs/apk/debug/
+          cd app/build/outputs/apk/debug/
+          jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore keystore.jks -storepass ${{ secrets.KEY_STORE_PASSWORD }} -keypass ${{ secrets.KEY_PASSWORD }} app-debug.apk ${{ secrets.KEY_ALIAS }}
+          $ANDROID_SDK_ROOT/build-tools/30.0.3/zipalign -v 4 app-debug.apk app-debug-signed.apk
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
